tdf#157636 FILEOPEN: PPT: Images have no background

regression from
    commit 81994cb2b8b32453a92bcb011830fcb884f22ff3
    Convert internal vcl bitmap formats transparency->alpha (II)

Change-Id: Ia0ed01e7c0d41bd909fe48666bc9aca5ff31d2bd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157824
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>